...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="teS-Aj-83g" secondAttribute="bottom" id="LEI-2h-QAH"/>
                            <constraint firstItem="teS-Aj-83g" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="W7w-gN-AkT"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="teS-Aj-83g" secondAttribute="trailing" id="jnH-ce-OxV"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Stations" id="FDr-rs-3YO"/>
                    <connections>
                        <outlet property="tblStations" destination="teS-Aj-83g" id="Sat-Xu-hVT"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="Bqe-AY-1L1" firstAttribute="trailing" secondItem="R9H-jA-HDc" secondAttribute="trailing" id="dpc-pY-jUw"/>
                            <constraint firstItem="R9H-jA-HDc" firstAttribute="top" secondItem="Bqe-AY-1L1" secondAttribute="top" id="eQv-3D-riG"/>
                            <constraint firstItem="Bqe-AY-1L1" firstAttribute="bottom" secondItem="R9H-jA-HDc" secondAttribute="bottom" id="huG-zk-e2y"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Bqe-AY-1L1"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Schedule" id="ohN-Bt-SXG"/>
                    <connections>
                        <outlet property="tblStations" destination="R9H-jA-HDc" id="ejZ-d7-5wF"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="MD4-CY-7ge" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="L9k-61-5ed" firstAttribute="leading" secondItem="L4S-1q-BcQ" secondAttribute="leading" constant="16" id="o3N-7A-UGT"/>
                            <constraint firstItem="fLR-Ct-Dz8" firstAttribute="top" secondItem="L9k-61-5ed" secondAttribute="bottom" constant="32" id="rX9-91-j6X"/>
                            <constraint firstItem="jVc-Am-JfO" firstAttribute="leading" secondItem="L4S-1q-BcQ" secondAttribute="leading" constant="8" id="tn2-sh-BzJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="L4S-1q-BcQ"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Direction" id="clV-NX-R5t"/>
                    <connections>
                        <outlet property="lblStation" destination="jVc-Am-JfO" id="zed-4f-l2u"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="k4a-t6-qxN" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
